<resources>
    <string name="app_name">My ApplicationEXP_8</string>
    <string name="menu_home">Home</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_zoom_in">Zoom In</string>
    <string name="menu_zoom_out">Zoom Out</string>
    <string name="menu_about">About / Developer</string>
    <string name="menu_exit">Exit</string>
    <string name="url_hint">Enter URL (e.g., https://www.google.com)</string>
    <string name="go">Go</string>
</resources>
